# resym

./: LICENSE  README.md
clang-parser/: CMakeLists.txt  defs.hh  field_access_driver.cc
clang-parser/include/: compilerUtils.hh  configUtils.hh  consumer.hh  macros.hh  propagation_rule.hh
clang-parser/prop_rules/: field_access_visitor.cc
clang-parser/utils/: compilerUtils.cc  configUtils.cc
posterior_reasoning/: eval.py  readme.md
process_data/: align_field.py  align_stack.py  error.py  gen_command.py  gen_train_field.py  init_align.py  parse_decompiled.py  parse_dwarf.py  prep_decompiled.py  process_data.sh  readme.md  utils.py
training_src/: dataset.py  eval_fielddecoder.py  eval_vardecoder.py  fielddecoder_inf.py  fielddecoder_train.py  vardecoder_inf.py  vardecoder_train.py
